<resources>
    <string name="app_name">PocketGardener</string>
    <string name="navigation_advice">Advice</string>
    <string name="header_advice">Advice</string>
    <string name="navigation_garden">Your Garden</string>
    <string name="header_garden">Your Garden</string>
    <string name="try_button">Try Me</string>
    <string name="header_advice_plant">Plant</string>
    <string name="time_title">Average Time Till Harvest</string>
    <string name="season_title">Season</string>
    <string name="steps_title">Steps</string>
    <string name="planted_title">Planted</string>
    <string name="ready_title">Ready</string>
    <string name="tips_title">Tips</string>
    <string name="share_button">Share Latest Photo</string>
    <string name="reminder_button">Set Reminder</string>
    <string name="add_photo_button">Add photo</string>
    <string name="upload_photo_button">Upload Photo</string>
    <string name="new_plant">New Plant</string>
    <string name="add_plant">Add a Plant</string>
    <string name="new_plant_example_name">Carrots</string>
    <string name="comments_title">Comments</string>
    <string name="new_plant_example_planted">11 Feb 2020</string>
    <string name="new_plant_example_comments">Leaves looking wilted</string>
    <string name="empty_string">" "</string>
    <string name="delete_plant">"Delete Plant"</string>
    <string name="clear_plants">"Clear Plants"</string>
    <string name="till_harvest">"till harvest"</string>
    <string name="info_title">For More Information</string>
    <string name="click_here">Click Here</string>
    <string name="days">days</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="taken">When was this taken?</string>
    <string-array name="month_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="take_photo_button">Take Photo</string>
    <string name="settings">Settings</string>
    <string name="change_settings">Change App Settings</string>



</resources>
